# freezedry

./: .gitattributes  CHANGELOG.md  README.md  freezedry.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  tests.yml
docs/source/: api_reference.rst  conf.py  examples.rst  index.rst  installation.rst
tests/: test_freezedry.py
