[project]
name = "freezedry"
version = "0.0.1"
authors = [
  { name="Andrew Landau", email="andrewtylerlandau@gmail.com" },
]
description = "A simple method to store a compressed copy of a code repository"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/landoskape/freezedry"
Issues = "https://github.com/landoskape/freezedry/issues"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"