[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "freezedry"
version = "0.0.6"
authors = [
    {name = "Andrew Landau", email = "andrew+tyler+landau+getridofthisanddtheplusses@gmail.com"},
]
description = "A simple package to save a compressed directory"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["python code", "compression", "compress"]
dependencies = [
    "gitignore_parser",
]

[project.urls]
Homepage = "https://github.com/landoskape/freezedry"
Repository = "https://github.com/landoskape/freezedry"
Documentation = "https://freezedry.readthedocs.io/en/stable/"